fix problem with course_id in course mapping and add Assignment and impl get and post methods
