# Backend/domain/src/main/java/sk/posam/fsa/discussion/AssignmentOutputType.java
@@ -1,0 +1,8 @@
+package sk.posam.fsa.discussion;
+
+
+public enum AssignmentOutputType {
+    STRING,
+    INT,
+    JSON
+}
